posiGen_FullsendBox/src/objects/System_Part__c.object
<CustomObject>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>System Parts</relationshipLabel>
        <relationshipName>System_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <formula>Part__r.Default_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Code__c</fullName>
        <label>Part Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Part__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <label>Pricebook</label>
        <picklist>
            <picklistValues>
                <fullName>LA 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA 6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCT 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCT 6.0</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deal__c</columns>
        <columns>Part_Code__c</columns>
        <columns>Part__c</columns>
        <columns>Pricebook__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>System_by_Deal_Id</fullName>
        <columns>NAME</columns>
        <columns>Part__c</columns>
        <columns>Part_Code__c</columns>
        <columns>Deal__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal__c</field>
            <operation>equals</operation>
            <value>test</value>
        </filters>
        <label>System by Deal Id</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>System Part Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>